third project about styling in react

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* background-color: #2d2834; */
-  background: radial-gradient(#27212e, #221530);
+  /* background: radial-gradient(#27212e, #221530); */
   color: #d9c9ee;
 }
 
